2024-01-24T08:19:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7637357353 # 52
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 14 53
* notice: prev accum: outdated-unq outdated-all / unq all: 538 2818 / 552 2868
* notice: next accum: outdated-unq outdated-all / unq all: 538 2818 / 554 2871
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-01-24]

2024-01-23T16:20:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7628699682 # 50
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
* notice: last 14d: unq all: 12 50
* notice: prev accum: outdated-unq outdated-all / unq all: 537 2816 / 552 2868
* notice: next accum: outdated-unq outdated-all / unq all: 538 2818 / 552 2868
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-09] / []

2024-01-21T16:18:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7602405721 # 44
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 13 52
* notice: prev accum: outdated-unq outdated-all / unq all: 537 2816 / 551 2862
* notice: next accum: outdated-unq outdated-all / unq all: 537 2816 / 552 2868
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [] / [2024-01-21]

2024-01-21T01:14:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7598037504 # 42