@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-11T01:09:25Z",
-  "count" : 8,
+  "timestamp" : "2024-01-24T16:20:18Z",
+  "count" : 5,
   "count_minmax" : [ 3, 8 ],
-  "count_decinc" : [ -0, +8 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "count_decinc" : [ -3, +8 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -2, +3 ]
 }
