@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-24T08:19:45Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2024-01-24T16:20:18Z",
+  "count" : 21,
+  "count_minmax" : [ 3, 21 ],
+  "count_decinc" : [ -0, +21 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
