@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-01-24T08:19:45Z",
+  "timestamp" : "2024-01-24T16:20:18Z",
   "count_outdated" : 2818,
   "uniques_outdated" : 538,
-  "count" : 2871,
-  "uniques" : 554,
+  "count" : 2889,
+  "uniques" : 556,
   "views" : [
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 8,
+      "count": 5,
       "count_minmax": [ 3, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count_decinc": [ 3, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
@@ -88,12 +88,12 @@
     },
     {
       "timestamp": "2024-01-24T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 21,
+      "count_minmax": [ 3, 21 ],
+      "count_decinc": [ 0, 21 ],
+      "uniques": 4,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
