@@ -1,11 +1,11 @@
 {
-  "count": 53,
+  "count": 68,
   "uniques": 14,
   "views": [
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 8,
-      "uniques": 3
+      "count": 5,
+      "uniques": 1
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2024-01-24T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 21,
+      "uniques": 4
     }
   ]
 }
