@@ -1,3 +1,12 @@
+2024-01-24T16:20:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7643112737 # 53
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
+* notice: last 14d: unq all: 14 68
+* notice: prev accum: outdated-unq outdated-all / unq all: 538 2818 / 554 2871
+* notice: next accum: outdated-unq outdated-all / unq all: 538 2818 / 556 2889
+* notice: prev exec diff / last date diff / accum: unq all: +2 +18 -2 -3 / +4 +21 -0 -0 / 4 21
+* notice: removed / changed dates: [] / [2024-01-10 2024-01-24]
+
 2024-01-24T08:19:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7637357353 # 52
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
